force-app/main/default/objects/Bank_Detail__c/Bank_Detail__c.object-meta.xml
<CustomObject>
    <description>SP-3699 [APAC - Bank detail creation/update process]</description>
    <label>Bank Detail</label>
    <nameField>
        <displayFormat>BD-{000000000}</displayFormat>
        <label>Bank Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>