force-app/main/default/objects/Bank_Detail__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <inlineHelpText>Please enter the Account number without any special characters</inlineHelpText>
    <label>Account Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>