force-app/main/default/objects/Bank_Detail__c/fields/Bank_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Owner__c</fullName>
    <label>Account Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>