force-app/main/default/objects/Bank_Detail__c/fields/Bank_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Type__c</fullName>
    <label>Bank Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Savings Account</fullName>
            </value>
            <value>
                <fullName>Current Account</fullName>
            </value>
            <value>
                <fullName>Bank Giro</fullName>
            </value>
            <value>
                <fullName>Plus Giro</fullName>
            </value>
            <value>
                <fullName>Bank Account</fullName>
            </value>
            <value>
                <fullName>Vista Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>