force-app/main/default/objects/Bank_Detail__c/fields/Bank_Direct_Debit__c.field-meta.xml
<CustomField>
    <fullName>Bank_Direct_Debit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Direct Debit</label>
    <type>Checkbox</type>
</CustomField>