force-app/main/default/objects/Bank_Detail__c/fields/Bank_Name_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_Picklist__c</fullName>
    <description>SSC-2181 Bank Name Picklist for PY based on country</description>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AHORROCOOP</fullName>
            </value>
            <value>
                <fullName>ALLBANK</fullName>
            </value>
            <value>
                <fullName>AMERICAN EXPRESS</fullName>
            </value>
            <value>
                <fullName>ANDA</fullName>
            </value>
            <value>
                <fullName>ASOC. BONAO DE AHORROS Y PREST</fullName>
            </value>
            <value>
                <fullName>ASOC. CIBAO</fullName>
            </value>
            <value>
                <fullName>ASOC. LA NACIONAL</fullName>
            </value>
            <value>
                <fullName>ASOC. POPULAR DE AHORROS Y PRESTAMOS</fullName>
            </value>
            <value>
                <fullName>ATLAS BANK</fullName>
            </value>
            <value>
                <fullName>BAC INTERNATIONAL BANK</fullName>
            </value>
            <value>
                <fullName>BACS BANCO DE CREDITO Y SECURITIZACION S</fullName>
            </value>
            <value>
                <fullName>BALBOA BANK &amp; TRUST</fullName>
            </value>
            <value>
                <fullName>BANCO CONSORCIO</fullName>
            </value>
            <value>
                <fullName>BANCO ALIADO</fullName>
            </value>
            <value>
                <fullName>BANCO BASA</fullName>
            </value>
            <value>
                <fullName>BANCO PARIS</fullName>
            </value>
            <value>
                <fullName>BANCO ATLANTICO</fullName>
            </value>
            <value>
                <fullName>BANCO AZTECA</fullName>
            </value>
            <value>
                <fullName>BANCO BDI SA</fullName>
            </value>
            <value>
                <fullName>BANCO BICA S.A.</fullName>
            </value>
            <value>
                <fullName>BANCO BICE</fullName>
            </value>
            <value>
                <fullName>BANCO BILBAO VIZCAYA ARGENTARIA</fullName>
            </value>
            <value>
                <fullName>BANCO BILBAO VIZCAYA ARGENTARIA, CHILE</fullName>
            </value>
            <value>
                <fullName>BANCO BISA S.A.</fullName>
            </value>
            <value>
                <fullName>BANCO BRADESCO ARGENTINA S.A.</fullName>
            </value>
            <value>
                <fullName>BANCO CENTRAL DE BOLIVIA</fullName>
            </value>
            <value>
                <fullName>BANCO CENTRAL DEL PARAGUAY</fullName>
            </value>
            <value>
                <fullName>BANCO CETELEM ARGENTINA S.A.</fullName>
            </value>
            <value>
                <fullName>BANCO CMF S.A.</fullName>
            </value>
            <value>
                <fullName>BANCO COINAG S.A.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>