force-app/main/default/objects/Bank_Detail__c/fields/Bank_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Sort_Code__c</fullName>
    <label>Bank Sort Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>