force-app/main/default/objects/Bank_Detail__c/fields/Blocked_Payout__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Payout__c</fullName>
    <label>Blocked Payout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Block</fullName>
            </value>
            <value>
                <fullName>Insolvency</fullName>
            </value>
            <value>
                <fullName>Third debtor declaration</fullName>
            </value>
            <value>
                <fullName>Change of Ownership</fullName>
            </value>
            <value>
                <fullName>Debcon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>