force-app/main/default/objects/Bank_Detail__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Bolivia</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>Dominican Republic</fullName>
            </value>
            <value>
                <fullName>Panamá</fullName>
            </value>
            <value>
                <fullName>Paraguay</fullName>
            </value>
            <value>
                <fullName>Uruguay</fullName>
            </value>
            <value>
                <fullName>Venezuela</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>