force-app/main/default/objects/Bank_Detail__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>SSC-2259</description>
    <inlineHelpText>If &apos;Mobile Wallet&apos; is chosen, make sure that the &apos;Account Number&apos; field includes full phone number, including international dialing code, e.g. +49&apos;</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Account</fullName>
                <default>true</default>
                <label>Bank Account</label>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Mobile Wallet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>