force-app/main/default/objects/Bank_Detail__c/fields/Swift_Code_BIC__c.field-meta.xml
<CustomField>
    <fullName>Swift_Code_BIC__c</fullName>
    <label>Swift Code (BIC)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>