force-app/main/default/objects/Bank_Detail__c/validationRules/APAC_Validate_SwiftCode_BIC.validationRule-meta.xml
<ValidationRule>
    <fullName>APAC_Validate_SwiftCode_BIC</fullName>
    <active>true</active>
    <description>SSC-2259</description>
    <errorConditionFormula>AND(OR(TEXT(Account__r.Record_Country__c) == &apos;Philippines&apos;,
TEXT(Account__r.Record_Country__c) == &apos;Thailand&apos;,
TEXT(Account__r.Record_Country__c) == &apos;Taiwan&apos;,
TEXT(Account__r.Record_Country__c) == &apos;Bangladesh&apos;,
TEXT(Account__r.Record_Country__c) == &apos;Singapore&apos;,
TEXT(Account__r.Record_Country__c) == &apos;Myanmar&apos;,
TEXT(Account__r.Record_Country__c) == &apos;Cambodia&apos;,
TEXT(Account__r.Record_Country__c) == &apos;Laos&apos;,
TEXT(Account__r.Record_Country__c) == &apos;Japan&apos;,
TEXT(Account__r.Record_Country__c) == &apos;Malaysia&apos;),ISBLANK( Swift_Code_BIC__c),Text(Payment_Method__c) == &apos;Bank Account&apos;,
NOT($Permission.Exclude_from_Validation))</errorConditionFormula>
    <errorDisplayField>Swift_Code_BIC__c</errorDisplayField>
    <errorMessage>Please fill Swift Code/BIC</errorMessage>
</ValidationRule>