force-app/main/default/objects/Bank_Detail__c/validationRules/CZ_Account_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CZ_Account_Number_Validation</fullName>
    <active>true</active>
    <description>Validates the account number format for CZ</description>
    <errorConditionFormula>AND(
	Account__r.RecordType.DeveloperName = &apos;CZ_Account&apos;,
	NOT(ISBLANK(Bank_Account_Number__c)),
	NOT(REGEX(Bank_Account_Number__c, &quot;^([0-9]{1,6}[-])?[0-9]{1,10}[/][0-9]{4}$&quot;))
)</errorConditionFormula>
    <errorMessage>Bank Account number is invalid, please enter in correct format and without spaces.</errorMessage>
</ValidationRule>