force-app/main/default/objects/Bank_Detail__c/validationRules/CZ_Mandatory_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>CZ_Mandatory_fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Account__r.RecordType.DeveloperName = &apos;CZ_Account&apos;,
OR(
ISBLANK(Bank_Name__c),
ISBLANK(Bank_Account_Number__c),
ISBLANK(Bank_Account_Owner__c),
ISBLANK(Activation_Date__c)
),
NOT($Permission.Exclude_from_Validation)
)</errorConditionFormula>
    <errorMessage>Bank Name, Bank Account Number, Bank Account Owner &amp; Activation Date are mandatory.</errorMessage>
</ValidationRule>