force-app/main/default/objects/Bank_Detail__c/validationRules/Global_Account_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Global_Account_Number_Validation</fullName>
    <active>true</active>
    <description>Bank Account Number should have at least 15 digits for Hong Kong and New Markets. Between 5 and 17 digits for Malaysia. Between 8 and 14 digits for Taiwan. And between 8 and 15 digits for Singapore.</description>
    <errorConditionFormula>AND(
	NOT($Permission.Exclude_from_Validation),
	Account__r.RecordType.DeveloperName = &apos;FP_Account&apos;,
	OR(AND(
		NOT(ISBLANK(Bank_Account_Number__c)),
		Text(Payment_Method__c) == &apos;Bank Account&apos;,
		OR(
		(ISPICKVAL(Account__r.Record_Country__c , &apos;Hong Kong&apos;) &amp;&amp; NOT(REGEX(Bank_Account_Number__c, &quot;^.{15,}$&quot;))),
		(ISPICKVAL(Account__r.Record_Country__c , &apos;Malaysia&apos;) &amp;&amp; NOT(REGEX(Bank_Account_Number__c, &quot;^[0-9]{5,17}$&quot;))),
		(ISPICKVAL(Account__r.Record_Country__c , &apos;Taiwan&apos;) &amp;&amp; NOT(REGEX(Bank_Account_Number__c, &quot;^[0-9]{8,14}$&quot;))),
		(ISPICKVAL(Account__r.Record_Country__c , &apos;Singapore&apos;) &amp;&amp; NOT(REGEX(Bank_Account_Number__c, &quot;^[0-9]{8,15}$&quot;))),
		(ISPICKVAL(Account__r.Record_Country__c , &apos;Thailand&apos;) &amp;&amp; NOT(REGEX(Bank_Account_Number__c, &quot;^[0-9]{10,14}$&quot;))),
		(ISPICKVAL(Account__r.Record_Country__c , &apos;Philippines&apos;) &amp;&amp; NOT(REGEX(Bank_Account_Number__c, &quot;^[0-9]{10,16}$&quot;))),
		(ISPICKVAL(Account__r.Record_Country__c , &apos;Bangladesh&apos;) &amp;&amp; NOT(REGEX(Bank_Account_Number__c, &quot;^[0-9]{5,17}$&quot;))),
                (ISPICKVAL(Account__r.Record_Country__c , &apos;Japan&apos;) &amp;&amp; NOT(REGEX(Bank_Account_Number__c, &quot;^[0-9]{14,15}$&quot;)))
		)
	),
	AND(
		Text(Payment_Method__c) == &apos;Mobile Wallet&apos;,NOT(REGEX(Bank_Account_Number__c, &quot;^\\+[1-9]{1}[0-9]{3,14}$&quot;)))))</errorConditionFormula>
    <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
    <errorMessage>Account Number should not be blank and needs to be in the right format</errorMessage>
</ValidationRule>