force-app/main/default/objects/Bank_Detail__c/validationRules/GLOBAL_Bank_Acount_Mandatory_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>GLOBAL_Bank_Acount_Mandatory_Field</fullName>
    <active>true</active>
    <description>SSC-2259</description>
    <errorConditionFormula>AND(Text(Payment_Method__c) == &apos;Bank Account&apos;,OR(AND(ISBLANK(Bank_Name__c), Account__r.RecordType.DeveloperName != &apos;PY_Account&apos;),ISBLANK(Bank_Account_Number__c),ISBLANK(Bank_Account_Owner__c)),
Account__r.RecordType.DeveloperName != &apos;CZ_Account&apos;,
NOT($Permission.Exclude_from_Validation))</errorConditionFormula>
    <errorMessage>Please Fill Account Number, Account Owner and Bank Name</errorMessage>
</ValidationRule>