force-app/main/default/objects/Bank_Detail__c/validationRules/GLOBAL_Payment_Method_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>GLOBAL_Payment_Method_Validation</fullName>
    <active>true</active>
    <description>SSC-2942</description>
    <errorConditionFormula>AND(
OR(
AND(TEXT(Payment_Method__c) == &apos;Mobile Wallet&apos;, AND(TEXT(Account__r.Record_Country__c) != &apos;Myanmar&apos;, TEXT(Account__r.Record_Country__c) != &apos;Bangladesh&apos;)),
AND(TEXT(Payment_Method__c) == &apos;Cash&apos;, AND(TEXT(Account__r.Record_Country__c) != &apos;Thailand&apos;, TEXT(Account__r.Record_Country__c) != &apos;Bangladesh&apos;,TEXT(Account__r.Record_Country__c) != &apos;Pakistan&apos;)),
AND(TEXT(Payment_Method__c) == &apos;Cheque&apos;, AND(TEXT(Account__r.Record_Country__c) != &apos;Bangladesh&apos;,TEXT(Account__r.Record_Country__c) != &apos;Pakistan&apos;))
),
NOT($Permission.Exclude_from_Validation))</errorConditionFormula>
    <errorMessage>This Payment Method Is Not Available For your Country</errorMessage>
</ValidationRule>